# fastcompress

./: README.md  benchmark.py  benchmark_diagnostic.py  generate_mixed_file.py  pyproject.toml  run_diagnostics_all.sh  setup.py  test_all_files.py  test_large_files.py  test_small_files.py  warp_compress.c
